Version 0.36.1
  * breseq will no longer throw a fatal error if read files that have the same name
    but are located at different paths are input.
  * Fixed gdtools MERGE not preserving header information from first GD file.
  * Fixed treatment of UNDEFINED by gdtools FILTER/REMOVE to allow matches to != UNDEFINED.

Version 0.36.0
  * Fixed an issue causing JC evidence to not save info in annotated GD files.
  * Fixed a crash when annotating GD files containing INV mutations.
  * Fixed empty line at the end of the FASTQ input causing an error.
  * Major updates to gdtools commands.
  * gdtools COMPARE/ANNOTATE
    * New TABLE format that provides a text (CSV) version of HTML style compare table.
    * TEXT_* output columns added if -b option provided.
    * Changed HTML default to not repeat header lines for easier loading into Excel.
      If you liked these, you can add them back as before with --repeat-header 10.
  *gdtools FILTER/REMOVE
    * Added the ability to preserve evidence entries.
    * Added control over commenting/removing filtered lines, renumbering IDs, and verbose messages.
    * Fixed (and explained) logic for matching the UNDEFINED value
    * New ASSIGNED field for filtering on whether evidence is used.
    * Added some examples of usage to the command line help.

Version 0.35.7
  * Speedup and fix of rare bug related to annotating mutations to properly account for cases
    in which multiple base substitutions occur in the same codon.

Version 0.35.6
  * Should be compatible with GenBank reference files produced by Prokka and
    NCBI PGAP, and with GFF3 files produced by PGAP.

Version 0.35.5
  * Bug fix for incorrect "Plots could not be created" message in HTML pages when -j is >1.
  * Bug fix for #254: "Provided translation table #0 does not have 64 codons". This was a rare
    case where two SNPs occur in the same codon of a CDS and also overlap a noncoding gene.

Version 0.35.4